ill finish this later

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>my crazy website</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <p>Hello World!</p>
-        <script src="index.js"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>my crazy website</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <div id="titlecard">
+        <img id="profilepicture" src="happydoeball.png" alt="smiling doeball :3">
+        <h1 class="bigtext">Doeball!!🐈</h1>
+        <h3 class="bigtext">Artist/Game Developer :3</h3>
+    </div>
+    <div id="buttons">
+        <button id="contact">Say hi!!</button>
+        <button id="comms">Comms (give me money)</button>
+    </div>
+    <div id="links">
+
+    </div>
+    <script src="index.js"></script>
+</body>
+
 </html>
