pretty responsive wow css variables crazy

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,15 @@
 </head>
 
 <body>
-    <div id="titlecard">
+    <div class="card" id="titlecard">
         <img id="profilepicture" src="happydoeball.png" alt="smiling doeball :3">
         <h1 class="bigtext">Doeball!!🐈</h1>
         <h3 class="bigtext">Artist/Game Developer :3</h3>
     </div>
-    <div id="buttons">
-        <button id="contact">Say hi!!</button>
-        <button id="comms">Comms (give me money)</button>
+    <div class="card" id="buttons">
+        <button class="bigbutton" id="contact">Say hi!!</button>
+        <br>
+        <button class="bigbutton" id="comms">Comms (give me money)</button>
     </div>
     <div id="links">
 
