--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>my crazy website</title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
 </head>
 
 <body>
@@ -18,10 +19,14 @@
         <br>
         <button class="bigbutton" id="comms">Comms (give me money)</button>
     </div>
-    <div id="links">
-
+    <div class="card" id="links">
+        <button class="linkbutton"><img class="buttonicon" src="happydoeball.png" alt="boing"></button>
+        <button class="linkbutton"><img class="buttonicon" src="happydoeball.png" alt="boing"></button>
+        <button class="linkbutton"><img class="buttonicon" src="happydoeball.png" alt="boing"></button>
+        <button class="linkbutton"><img class="buttonicon" src="happydoeball.png" alt="boing"></button>
+        <button class="linkbutton"><img class="buttonicon" src="happydoeball.png" alt="boing"></button>
+        <button class="linkbutton"><img class="buttonicon" src="happydoeball.png" alt="boing"></button>
     </div>
-    <script src="index.js"></script>
 </body>
 
 </html>
