--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="card" id="titlecard">
         <img id="profilepicture" src="happydoeball.png" alt="smiling doeball :3">
-        <h1 class="bigtext">Doeball!!🐈</h1>
+        <h1 class="bigtext">Doeball!!<img id="doeball-emoji" src="doemoji.png"></h1>
         <h3 class="bigtext">Artist & Game Developer :3</h3>
     </div>
     <div class="card" id="buttons">
