--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--```_____`_`````````````_____`````````````_```````````_`_``-->
+<!--``|_```_(`)```````````|``__`\```````````|`|`````````|`|`|`-->
+<!--````|`|`|/`_`__`___```|`|``|`|`___```___|`|__```__`_|`|`|`-->
+<!--````|`|```|`'_```_`\``|`|``|`|/`_`\`/`_`\`'_`\`/`_``|`|`|`-->
+<!--```_|`|_``|`|`|`|`|`|`|`|__|`|`(_)`|``__/`|_)`|`(_|`|`|`|`-->
+<!--``|_____|`|_|`|_|`|_|`|_____/`\___/`\___|_.__/`\__,_|_|_|`-->
+
+<!--You're nosy! Hello, fellow programmer/inspect tab enthusiast!-->
+
 <head>
     <meta charset="utf-8">
     <title>my crazy website</title>
