completed responsive design (snuck in a footer too)

--- a/public/index.html
+++ b/public/index.html
@@ -30,48 +30,50 @@
         <button class="bigbutton" id="comms">Comms (give me money)</button>
     </div>
     <div class="card" id="links">
-        <div class="linkbox" id="itch">
-            <h3 class="bigtext">Itch.io</h3>
-                <a class="round-button" id="itch-button" href="https://doughball.itch.io">
-                    <svg class="link-icon" height="235.452" width="261.728" viewBox="0 0 245.37069 220.73612">
-                        <path d="M31.99 1.365C21.287 7.72.2 31.945 0 38.298v10.516C0 62.144 12.46 73.86 23.773 73.86c13.584 0 24.902-11.258 24.903-24.62 0 13.362 10.93 24.62 24.515 24.62 13.586 0 24.165-11.258 24.165-24.62 0 13.362 11.622 24.62 25.207 24.62h.246c13.586 0 25.208-11.258 25.208-24.62 0 13.362 10.58 24.62 24.164 24.62 13.585 0 24.515-11.258 24.515-24.62 0 13.362 11.32 24.62 24.903 24.62 11.313 0 23.773-11.714 23.773-25.046V38.298c-.2-6.354-21.287-30.58-31.988-36.933C180.118.197 157.056-.005 122.685 0c-34.37.003-81.228.54-90.697 1.365zm65.194 66.217a28.025 28.025 0 0 1-4.78 6.155c-5.128 5.014-12.157 8.122-19.906 8.122a28.482 28.482 0 0 1-19.948-8.126c-1.858-1.82-3.27-3.766-4.563-6.032l-.006.004c-1.292 2.27-3.092 4.215-4.954 6.037a28.5 28.5 0 0 1-19.948 8.12c-.934 0-1.906-.258-2.692-.528-1.092 11.372-1.553 22.24-1.716 30.164l-.002.045c-.02 4.024-.04 7.333-.06 11.93.21 23.86-2.363 77.334 10.52 90.473 19.964 4.655 56.7 6.775 93.555 6.788h.006c36.854-.013 73.59-2.133 93.554-6.788 12.883-13.14 10.31-66.614 10.52-90.474-.022-4.596-.04-7.905-.06-11.93l-.003-.045c-.162-7.926-.623-18.793-1.715-30.165-.786.27-1.757.528-2.692.528a28.5 28.5 0 0 1-19.948-8.12c-1.862-1.822-3.662-3.766-4.955-6.037l-.006-.004c-1.294 2.266-2.705 4.213-4.563 6.032a28.48 28.48 0 0 1-19.947 8.125c-7.748 0-14.778-3.11-19.906-8.123a28.025 28.025 0 0 1-4.78-6.155 27.99 27.99 0 0 1-4.736 6.155 28.49 28.49 0 0 1-19.95 8.124c-.27 0-.54-.012-.81-.02h-.007c-.27.008-.54.02-.813.02a28.49 28.49 0 0 1-19.95-8.123 27.992 27.992 0 0 1-4.736-6.155zm-20.486 26.49l-.002.01h.015c8.113.017 15.32 0 24.25 9.746 7.028-.737 14.372-1.105 21.722-1.094h.006c7.35-.01 14.694.357 21.723 1.094 8.93-9.747 16.137-9.73 24.25-9.746h.014l-.002-.01c3.833 0 19.166 0 29.85 30.007L210 165.244c8.504 30.624-2.723 31.373-16.727 31.4-20.768-.773-32.267-15.855-32.267-30.935-11.496 1.884-24.907 2.826-38.318 2.827h-.006c-13.412 0-26.823-.943-38.318-2.827 0 15.08-11.5 30.162-32.267 30.935-14.004-.027-25.23-.775-16.726-31.4L46.85 124.08c10.684-30.007 26.017-30.007 29.85-30.007zm45.985 23.582v.006c-.02.02-21.863 20.08-25.79 27.215l14.304-.573v12.474c0 .584 5.74.346 11.486.08h.006c5.744.266 11.485.504 11.485-.08v-12.474l14.304.573c-3.928-7.135-25.79-27.215-25.79-27.215v-.006l-.003.002z" color="#000" fill="#fff"/>
-                    </svg>
-                </a>
-            <h4>Play my games!</h4>
-        </div>
-        <div class="linkbox" id="discord">
-            <h3 class="bigtext">Discord</h3>
-                <a class="round-button" id="discord-button" href="https://discord.gg/XqfPcGGXMz">
-                    <svg viewBox="0 0 127.14 96.36" class="link-icon">
-                        <path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/>
-                    </svg>
-                </a>
-            <h4>Join my server :3</h4>
-        </div>
-        <div class="linkbox" id="bluesky">
-            <h3 class="bigtext">Bluesky</h3>
-                <a class="round-button" id="bluesky-button" href="https://bsky.app/profile/doeball.ca">
-                    <svg viewBox="0 0 64 57" class="link-icon" id="bsky-icon">
-                        <path fill="#fff" d="M13.873 3.805C21.21 9.332 29.103 20.537 32 26.55v15.882c0-.338-.13.044-.41.867-1.512 4.456-7.418 21.847-20.923 7.944-7.111-7.32-3.819-14.64 9.125-16.85-7.405 1.264-15.73-.825-18.014-9.015C1.12 23.022 0 8.51 0 6.55 0-3.268 8.579-.182 13.873 3.805ZM50.127 3.805C42.79 9.332 34.897 20.537 32 26.55v15.882c0-.338.13.044.41.867 1.512 4.456 7.418 21.847 20.923 7.944 7.111-7.32 3.819-14.64-9.125-16.85 7.405 1.264 15.73-.825 18.014-9.015C62.88 23.022 64 8.51 64 6.55c0-9.818-8.578-6.732-13.873-2.745Z"></path>
-                    </svg>
-                </a>
-            <h4>I post art here</h4>
-        </div>
-        <div class="linkbox" id="tumblr">
-            <h3 class="bigtext">Tumblr</h3>
-                <a class="round-button" id="tumblr-button" href="https://www.tumblr.com/doughcatball">
-                    <svg class="link-icon" viewBox="-4 0 20 20" id="tumblr-icon">
-                        <g id="Dribbble-Light-Preview" transform="translate(-184.50000, -7399.000000)" fill="#fff">
-                            <g id="icons" transform="translate(56.000000, 160.000000)">
-                                <path d="M139.00148,7254.975 L140,7257.827 C139.622944,7258.358 137.91209,7258.973 136.376708,7258.998 C131.82592,7259.073 130.088955,7255.895 130.088955,7253.657 L130.088955,7247 L128,7247 L128,7244.539 C131.169989,7243.445 131.931413,7240.708 132.110018,7239.149 C132.122552,7239.042 132.210288,7239 132.261467,7239 L135.311341,7239 L135.311341,7244 L139.489251,7244 L139.489251,7247 L135.311341,7247 L135.311341,7253.349 C135.311341,7254.195 135.646619,7255.363 137.318827,7255.32 C137.873444,7255.307 138.612934,7255.152 139.00148,7254.975"></path>
+        <div id="links-container">
+            <div class="linkbox" id="itch">
+                <h3 class="bigtext">Itch.io</h3>
+                    <a class="round-button" id="itch-button" href="https://doughball.itch.io">
+                        <svg class="link-icon" height="235.452" width="261.728" viewBox="0 0 245.37069 220.73612">
+                            <path d="M31.99 1.365C21.287 7.72.2 31.945 0 38.298v10.516C0 62.144 12.46 73.86 23.773 73.86c13.584 0 24.902-11.258 24.903-24.62 0 13.362 10.93 24.62 24.515 24.62 13.586 0 24.165-11.258 24.165-24.62 0 13.362 11.622 24.62 25.207 24.62h.246c13.586 0 25.208-11.258 25.208-24.62 0 13.362 10.58 24.62 24.164 24.62 13.585 0 24.515-11.258 24.515-24.62 0 13.362 11.32 24.62 24.903 24.62 11.313 0 23.773-11.714 23.773-25.046V38.298c-.2-6.354-21.287-30.58-31.988-36.933C180.118.197 157.056-.005 122.685 0c-34.37.003-81.228.54-90.697 1.365zm65.194 66.217a28.025 28.025 0 0 1-4.78 6.155c-5.128 5.014-12.157 8.122-19.906 8.122a28.482 28.482 0 0 1-19.948-8.126c-1.858-1.82-3.27-3.766-4.563-6.032l-.006.004c-1.292 2.27-3.092 4.215-4.954 6.037a28.5 28.5 0 0 1-19.948 8.12c-.934 0-1.906-.258-2.692-.528-1.092 11.372-1.553 22.24-1.716 30.164l-.002.045c-.02 4.024-.04 7.333-.06 11.93.21 23.86-2.363 77.334 10.52 90.473 19.964 4.655 56.7 6.775 93.555 6.788h.006c36.854-.013 73.59-2.133 93.554-6.788 12.883-13.14 10.31-66.614 10.52-90.474-.022-4.596-.04-7.905-.06-11.93l-.003-.045c-.162-7.926-.623-18.793-1.715-30.165-.786.27-1.757.528-2.692.528a28.5 28.5 0 0 1-19.948-8.12c-1.862-1.822-3.662-3.766-4.955-6.037l-.006-.004c-1.294 2.266-2.705 4.213-4.563 6.032a28.48 28.48 0 0 1-19.947 8.125c-7.748 0-14.778-3.11-19.906-8.123a28.025 28.025 0 0 1-4.78-6.155 27.99 27.99 0 0 1-4.736 6.155 28.49 28.49 0 0 1-19.95 8.124c-.27 0-.54-.012-.81-.02h-.007c-.27.008-.54.02-.813.02a28.49 28.49 0 0 1-19.95-8.123 27.992 27.992 0 0 1-4.736-6.155zm-20.486 26.49l-.002.01h.015c8.113.017 15.32 0 24.25 9.746 7.028-.737 14.372-1.105 21.722-1.094h.006c7.35-.01 14.694.357 21.723 1.094 8.93-9.747 16.137-9.73 24.25-9.746h.014l-.002-.01c3.833 0 19.166 0 29.85 30.007L210 165.244c8.504 30.624-2.723 31.373-16.727 31.4-20.768-.773-32.267-15.855-32.267-30.935-11.496 1.884-24.907 2.826-38.318 2.827h-.006c-13.412 0-26.823-.943-38.318-2.827 0 15.08-11.5 30.162-32.267 30.935-14.004-.027-25.23-.775-16.726-31.4L46.85 124.08c10.684-30.007 26.017-30.007 29.85-30.007zm45.985 23.582v.006c-.02.02-21.863 20.08-25.79 27.215l14.304-.573v12.474c0 .584 5.74.346 11.486.08h.006c5.744.266 11.485.504 11.485-.08v-12.474l14.304.573c-3.928-7.135-25.79-27.215-25.79-27.215v-.006l-.003.002z" color="#000" fill="#fff"/>
+                        </svg>
+                    </a>
+                <h4>Play my games!</h4>
+            </div>
+            <div class="linkbox" id="discord">
+                <h3 class="bigtext">Discord</h3>
+                    <a class="round-button" id="discord-button" href="https://discord.gg/XqfPcGGXMz">
+                        <svg viewBox="0 0 127.14 96.36" class="link-icon">
+                            <path fill="#fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/>
+                        </svg>
+                    </a>
+                <h4>Join my server :3</h4>
+            </div>
+            <div class="linkbox" id="bluesky">
+                <h3 class="bigtext">Bluesky</h3>
+                    <a class="round-button" id="bluesky-button" href="https://bsky.app/profile/doeball.ca">
+                        <svg viewBox="0 0 64 57" class="link-icon" id="bsky-icon">
+                            <path fill="#fff" d="M13.873 3.805C21.21 9.332 29.103 20.537 32 26.55v15.882c0-.338-.13.044-.41.867-1.512 4.456-7.418 21.847-20.923 7.944-7.111-7.32-3.819-14.64 9.125-16.85-7.405 1.264-15.73-.825-18.014-9.015C1.12 23.022 0 8.51 0 6.55 0-3.268 8.579-.182 13.873 3.805ZM50.127 3.805C42.79 9.332 34.897 20.537 32 26.55v15.882c0-.338.13.044.41.867 1.512 4.456 7.418 21.847 20.923 7.944 7.111-7.32 3.819-14.64-9.125-16.85 7.405 1.264 15.73-.825 18.014-9.015C62.88 23.022 64 8.51 64 6.55c0-9.818-8.578-6.732-13.873-2.745Z"></path>
+                        </svg>
+                    </a>
+                <h4>I post art here</h4>
+            </div>
+            <div class="linkbox" id="tumblr">
+                <h3 class="bigtext">Tumblr</h3>
+                    <a class="round-button" id="tumblr-button" href="https://www.tumblr.com/doughcatball">
+                        <svg class="link-icon" viewBox="-4 0 20 20" id="tumblr-icon">
+                            <g id="Dribbble-Light-Preview" transform="translate(-184.50000, -7399.000000)" fill="#fff">
+                                <g id="icons" transform="translate(56.000000, 160.000000)">
+                                    <path d="M139.00148,7254.975 L140,7257.827 C139.622944,7258.358 137.91209,7258.973 136.376708,7258.998 C131.82592,7259.073 130.088955,7255.895 130.088955,7253.657 L130.088955,7247 L128,7247 L128,7244.539 C131.169989,7243.445 131.931413,7240.708 132.110018,7239.149 C132.122552,7239.042 132.210288,7239 132.261467,7239 L135.311341,7239 L135.311341,7244 L139.489251,7244 L139.489251,7247 L135.311341,7247 L135.311341,7253.349 C135.311341,7254.195 135.646619,7255.363 137.318827,7255.32 C137.873444,7255.307 138.612934,7255.152 139.00148,7254.975"></path>
+                                </g>
                             </g>
-                        </g>
-                    </svg>
-                </a>
-            <h4>And here too</h4>
+                        </svg>
+                    </a>
+                <h4>And here too</h4>
+            </div>
         </div>
     </div>
-
+    <a id="footer" href="https://github.com/Kaycaul/webserver">( Made without Carrd, Self-hosted with ♡)</a>
     
 </body>
 
