boopcounter works client side

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
 
 <body>
     <div class="card" id="titlecard">
-        <img id="profilepicture" src="happydoeball.png" alt="smiling doeball :3">
+        <img id="profilepicture" src="happydoeball.png" alt="smiling doeball :3" title="Boop!">
+        <p id="boop-counter" hidden>Boops: 0</p>
         <h1 class="bigtext">Doeball!!<img id="doeball-emoji" src="doemoji.png"></h1>
         <h3 class="bigtext">Artist & Game Developer :3</h3>
     </div>
