added meta? no way of knowing if it works

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>my crazy website</title>
+    <title>Doeball's Website</title>
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="index.js" defer></script>
+    <!-- embed stuff -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Doeball's Site" />
+    <meta property="og:description" content="My website where you can find contacts and stuff" />
+    <meta property="og:url" content="https://meow.doeball.ca" />
+    <meta property="og:image" content="https://meow.doeball.ca/bloo_headshot.png" />
+    <meta name="theme-color" content="#e01227" />
+
 </head>
 
 <body>
@@ -27,20 +35,30 @@
     </div>
     <main id="main">
         <div class="card" id="buttons">
-            <button class="bigbutton" id="contact-button">Contact<img src="envelope-svgrepo-com.svg" alt="envelope" id="envelope-icon"></button>
-            <button class="bigbutton" id="comms-button">Art Commissions <img src="art-palette-svgrepo-com.svg" alt="art palette" id="palette-icon"> </button>
+            <button class="bigbutton" id="contact-button">Contact<img src="envelope-svgrepo-com.svg" alt="envelope"
+                    id="envelope-icon"></button>
+            <button class="bigbutton" id="comms-button">Art Commissions <img src="art-palette-svgrepo-com.svg"
+                    alt="art palette" id="palette-icon"> </button>
         </div>
         <div class="card" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
-            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="bl.png" alt="bleh silly cat" class="emote"></p>
-            <p>You can also dm me on any of the socials listed below, or email me at <a class="email" href="mailto:doughcatball@gmail.com">doughcatball@gmail.com</a>! I'm always happy to meet new people<img src="boing.png" alt="boing!!" class="emote"></p>
-            <button class="bigbutton back-button">Back <img src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back" id="contact-back"></button>
+            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="bl.png" alt="bleh silly cat"
+                    class="emote"></p>
+            <p>You can also dm me on any of the socials listed below, or email me at <a class="email"
+                    href="mailto:doughcatball@gmail.com">doughcatball@gmail.com</a>! I'm always happy to meet new
+                people<img src="boing.png" alt="boing!!" class="emote"></p>
+            <button class="bigbutton back-button">Back <img
+                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
+                    id="contact-back"></button>
         </div>
         <div class="card" id="comms">
-            <button class="bigbutton back-button">Back <img src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"></button>
+            <button class="bigbutton back-button">Back <img
+                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
+                    class="back"></button>
             <h2 class="bigtext">Want some art?</h2>
             <p>I am often busy, but I can draw your characters or make a reference sheet for you!</p>
-            <p>(I plan on making another page to showcase all my art and process commissions automatically, but for now, here are some examples)</p>
+            <p>(I plan on making another page to showcase all my art and process commissions automatically, but for now,
+                here are some examples)</p>
             <h3 class="bigtext">Headshot/Icon (10 USD)</h3>
             <div class="example-art" alt="headshot example" id="headshot"></div>
             <h3 class="bigtext">Halfbody (20 USD)</h3>
@@ -48,7 +66,9 @@
             <h3 class="bigtext">Fullbody (30 USD)</h3>
             <div class="example-art" alt="fullbody art example" id="fullbody"></div>
             <p>With any order over 45 USD, you get a bonus free icon!</p>
-            <button class="bigbutton back-button">Back <img src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"></button>
+            <button class="bigbutton back-button">Back <img
+                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
+                    class="back"></button>
         </div>
     </main>
     <div class="card" id="links">
