--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
         </div>
     </div>
     <a id="footer" href="https://github.com/Kaycaul/webserver">( Made without Carrd, Self-hosted with ♡)</a>
-
+    <div class="topleft" id="glow"></div>
 </body>
 
 </html>
