--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,18 @@
 </head>
 
 <body>
+    <header>
+        <img src="placeholder_pfp.png" alt="my profile picture" id="headerpfp">
+        <h1 class="bigtext" hidden>Doeball</h1>
+        <nav>
+            <p>item 1</p>
+            <p>item 2</p>
+            <p>item 3</p>
+        </nav>
+        <img src="hamburger-menu-more-2-svgrepo-com.svg" alt="hamburger menu icon" id="hamburger-icon">
+    </header>
     <div class="card" id="titlecard">
-        <img id="profilepicture" src="happydoeball.png" alt="smiling doeball :3" title="Boop!">
+        <img id="profilepicture" src="happydoeball.png" alt="smiling doeball profile picture" title="Boop!">
         <p id="boop-counter" hidden>Boops: 0</p>
         <h1 class="bigtext" id="title">Doeball!!<img id="doeball-emoji" src="doemoji.png"></h1>
         <h3 class="bigtext">Artist & Game Developer :3</h3>
@@ -42,11 +52,11 @@
         </div>
         <div class="card" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
-            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="bl.png" alt="bleh silly cat"
+            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="bl.png" alt="cat sticking out tongue emoji"
                     class="emote"></p>
             <p>You can also dm me on any of the socials listed below, or email me at <a class="email"
                     href="mailto:doughcatball@gmail.com">doughcatball@gmail.com</a>! I'm always happy to meet new
-                people<img src="boing.png" alt="boing!!" class="emote"></p>
+                people<img src="boing.png" alt="doeball eyes popping out emoji" class="emote"></p>
             <button class="bigbutton back-button">Back <img
                     src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
                     id="contact-back"></button>
@@ -60,7 +70,7 @@
             <p>(I plan on making another page to showcase all my art and process commissions automatically, but for now,
                 here are some examples)</p>
             <h3 class="bigtext">Headshot/Icon (10 USD)</h3>
-            <div class="example-art" alt="headshot example" id="headshot"></div>
+            <div class="example-art" alt="headshot art example" id="headshot"></div>
             <h3 class="bigtext">Halfbody (20 USD)</h3>
             <div class="example-art" alt="Halfbody art example" id="halfbody"></div>
             <h3 class="bigtext">Fullbody (30 USD)</h3>
