gallery button, aligned icons

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
                     id="envelope-icon"></button>
             <button class="bigbutton" id="comms-button">Art Commissions <img src="art-palette-svgrepo-com.svg"
                     alt="art palette" id="palette-icon"> </button>
+            <button class="bigbutton" id="art-button">Gallery <img src="image-picture-svgrepo-com.svg"
+                    alt="image icon" id="gallery-icon"> </button>
         </div>
         <div class="card" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
