--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,15 @@
         <h3 class="bigtext">Artist & Game Developer :3</h3>
     </div>
     <main id="main">
-        <div class="card" id="buttons">
+        <div class="card sliding-card" id="buttons">
             <button class="bigbutton" id="contact-button">Contact<img src="envelope-svgrepo-com.svg" alt="envelope"
                     id="envelope-icon"></button>
             <button class="bigbutton" id="comms-button">Art Commissions <img src="art-palette-svgrepo-com.svg"
                     alt="art palette" id="palette-icon"> </button>
-            <button class="bigbutton" id="art-button">Gallery <img src="image-picture-svgrepo-com.svg"
+            <button class="bigbutton" id="gallery-button">Gallery <img src="image-picture-svgrepo-com.svg"
                     alt="image icon" id="gallery-icon"> </button>
         </div>
-        <div class="card" id="contact">
+        <div class="card sliding-card" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
             <p>Add me on Discord! The fastest way to reach me is @doeball <img src="bl.png" alt="cat sticking out tongue emoji"
                     class="emote"></p>
@@ -53,7 +53,16 @@
                     src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
                     id="contact-back"></button>
         </div>
-        <div class="card" id="comms">
+        <div class="card sliding-card" id="gallery">
+            <h2 class="bigtext">Check out all this art!</h2>
+            <p>...I'm uhhh-</p>
+            <p>I'm still working on this part</p>
+            <p>The transitions are cool though aren't they?</p>
+            <button class="bigbutton back-button">Back <img
+                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
+                    id="contact-back"></button>
+        </div>
+        <div class="card sliding-card" id="comms">
             <button class="bigbutton back-button">Back <img
                     src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
