organized all images

--- a/public/index.html
+++ b/public/index.html
@@ -21,36 +21,36 @@
     <meta property="og:title" content="Doeball's Site" />
     <meta property="og:description" content="My website where you can find contacts and stuff" />
     <meta property="og:url" content="https://meow.doeball.ca" />
-    <meta property="og:image" content="https://meow.doeball.ca/bloo_headshot.png" />
+    <meta property="og:image" content="https://meow.doeball.ca/assets/bloo_headshot.png" />
     <meta name="theme-color" content="#e01227" />
 
 </head>
 
 <body>
     <div class="card" id="titlecard">
-        <img id="profilepicture" src="happydoeball.png" alt="smiling doeball profile picture" title="Boop!">
+        <img id="profilepicture" src="assets/happydoeball.png" alt="smiling doeball profile picture" title="Boop!">
         <p id="boop-counter" hidden>Boops: 0</p>
-        <h1 class="bigtext" id="title">Doeball!!<img id="doeball-emoji" src="doemoji.png"></h1>
+        <h1 class="bigtext" id="title">Doeball!!<img id="doeball-emoji" src="assets/doemoji.png"></h1>
         <h3 class="bigtext">Artist & Game Developer :3</h3>
     </div>
     <main id="main">
         <div class="card sliding-card" id="buttons">
-            <button class="bigbutton" id="contact-button">Contact<img src="envelope-svgrepo-com.svg" alt="envelope"
+            <button class="bigbutton" id="contact-button">Contact<img src="assets/envelope-svgrepo-com.svg" alt="envelope"
                     id="envelope-icon"></button>
-            <button class="bigbutton" id="comms-button">Art Commissions <img src="art-palette-svgrepo-com.svg"
+            <button class="bigbutton" id="comms-button">Art Commissions <img src="assets/art-palette-svgrepo-com.svg"
                     alt="art palette" id="palette-icon"> </button>
-            <button class="bigbutton" id="gallery-button">Gallery <img src="image-picture-svgrepo-com.svg"
+            <button class="bigbutton" id="gallery-button">Gallery <img src="assets/image-picture-svgrepo-com.svg"
                     alt="image icon" id="gallery-icon"> </button>
         </div>
         <div class="card sliding-card" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
-            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="bl.png" alt="cat sticking out tongue emoji"
+            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="assets/bl.png" alt="cat sticking out tongue emoji"
                     class="emote"></p>
             <p>You can also dm me on any of the socials listed below, or email me at <a class="email"
                     href="mailto:doughcatball@gmail.com">doughcatball@gmail.com</a>! I'm always happy to meet new
-                people<img src="boing.png" alt="doeball eyes popping out emoji" class="emote"></p>
+                people<img src="assets/boing.png" alt="doeball eyes popping out emoji" class="emote"></p>
             <button class="bigbutton back-button">Back <img
-                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
+                    src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
                     id="contact-back"></button>
         </div>
         <div class="card sliding-card" id="gallery">
@@ -59,12 +59,12 @@
             <p>I'm still working on this part</p>
             <p>The transitions are cool though aren't they?</p>
             <button class="bigbutton back-button">Back <img
-                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
+                    src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
                     id="contact-back"></button>
         </div>
         <div class="card sliding-card" id="comms">
             <button class="bigbutton back-button">Back <img
-                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
+                    src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
             <h2 class="bigtext">Want some art?</h2>
             <p>I am often busy, but I can draw your characters or make a reference sheet for you!</p>
@@ -78,7 +78,7 @@
             <div class="example-art" alt="fullbody art example" id="fullbody"></div>
             <p>With any order over 45 USD, you get a bonus free icon!</p>
             <button class="bigbutton back-button">Back <img
-                    src="back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
+                    src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
         </div>
     </main>
