glow effect is cooler now

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="index.js" defer></script>
+    <!-- background glow -->
+    <script src="glow.js" defer></script>
+    <link rel="stylesheet" href="glow.css">
     <!-- embed stuff -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Doeball's Site" />
@@ -26,7 +29,7 @@
 
 </head>
 
-<body>
+<body class="glow-js">
     <div class="card" id="titlecard">
         <img id="profilepicture" src="assets/happydoeball.png" alt="smiling doeball profile picture" title="Boop!">
         <p id="boop-counter" hidden>Boops: 0</p>
