--- a/public/games/index.html
+++ b/public/games/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--```_____`_`````````````_____`````````````_```````````_`_``-->
+<!--``|_```_(`)```````````|``__`\```````````|`|`````````|`|`|`-->
+<!--````|`|`|/`_`__`___```|`|``|`|`___```___|`|__```__`_|`|`|`-->
+<!--````|`|```|`'_```_`\``|`|``|`|/`_`\`/`_`\`'_`\`/`_``|`|`|`-->
+<!--```_|`|_``|`|`|`|`|`|`|`|__|`|`(_)`|``__/`|_)`|`(_|`|`|`|`-->
+<!--``|_____|`|_|`|_|`|_|`|_____/`\___/`\___|_.__/`\__,_|_|_|`-->
+
+<!--You're nosy! Hello, fellow programmer/inspect tab enthusiast!-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +20,10 @@
     <meta property="og:url" content="https://meow.doeball.ca/games/" />
     <meta property="og:image" content="https://meow.doeball.ca/assets/umbrela.png" />
     <meta name="theme-color" content="#e01227" />
-    <link rel="stylesheet" href="/public/games/index.css">
+    <link rel="stylesheet" href="/games/index.css">
     <!-- glow -->
     <script src="../glow.js" defer></script>
-    <link rel="stylesheet" href="/public/glow.css">
+    <link rel="stylesheet" href="/glow.css">
 </head>
 
 <body class="glow-js">
@@ -23,36 +32,36 @@
         <div class="game-card">
             <h2 class="game-card-title">Totally Normal sneaks Befriending Simulator</h2>
             <a class="game-card-image-wrapper" href="/games/sneaks-game">
-                <img class="game-card-image" src="/public/assets/umbrela.png"
+                <img class="game-card-image" src="/assets/umbrela.png"
                     alt="sneaks holding an umbrella out to the viewer">
-                <img src="/public/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
+                <img src="/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
             </a>
             <p class="game-card-description">Absurd visual novel, ft. Lenixtt</p>
         </div>
         <div class="game-card">
             <h2 class="game-card-title">TASK_MANAGER</h2>
             <a class="game-card-image-wrapper" href="/games/task-manager">
-                <img class="game-card-image" src="/public/assets/taskmangerthumbnail.png"
+                <img class="game-card-image" src="/assets/taskmangerthumbnail.png"
                     alt="a green terminal showing a log of commands">
-                <img src="/public/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
+                <img src="/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
             </a>
             <p class="game-card-description">Fast-paced typing game, ft. Keheck, Loppatus (GMTK 2023 submission)</p>
         </div>
         <div class="game-card">
             <h2 class="game-card-title">Liquid Skies Zero</h2>
             <a class="game-card-image-wrapper" href="https://doeball.itch.io/liquid-skies-zero">
-                <img class="game-card-image" src="/public/assets/lszthumbnail.png"
+                <img class="game-card-image" src="/assets/lszthumbnail.png"
                     alt="a screenshot from liquid skies zero">
-                <img src="/public/assets/download-svgrepo-com.svg" alt="Download" class="game-card-image-play">
+                <img src="/assets/download-svgrepo-com.svg" alt="Download" class="game-card-image-play">
             </a>
             <p class="game-card-description">My first game, features early iterations of my characters</p>
         </div>
         <div class="game-card" id="cart-game-card">
             <h2 class="game-card-title">Underground Cart Adventures: Cart School Ultimate Tunnels Edition Simulator: The Final Game Part One: The Super Speed 2D game!!! Speedrunners dream (not minecraft) Non-Voxel Game Go fast!! Deception game(there is no deception hahaha deceived you )にほん 2023 Demo Difficulty: Easy (99% will FAIL!!! (can you beat it?? (you cant lol))) +日本 ベストゲーム have you ever wanted to ride a golf cart in the Cart School tunnels????? Well you can't, it's not a golf cart, it's a maintenance cart. Now you can ride it omg + 🛒✨📮🚟🧯</h2>
             <a class="game-card-image-wrapper" href="/games/cart-game">
-                <img class="game-card-image" src="/public/assets/cart-game.png"
+                <img class="game-card-image" src="/assets/cart-game.png"
                     alt="a screenshot from the cart game">
-                <img src="/public/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
+                <img src="/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
             </a>
             <p class="game-card-description">Final group project for COMP1501, and yes, that is the title</p>
         </div>
@@ -60,7 +69,7 @@
             <h2 class="game-card-title">More coming soon!</h2>
             <a class="game-card-image-wrapper">
                 <div id="coming-soon-pattern" class="game-card-image"></div>
-                <img src="/public/assets/question-mark-svgrepo-com.svg" alt="Play" class="game-card-image-play">
+                <img src="/assets/question-mark-svgrepo-com.svg" alt="Play" class="game-card-image-play">
             </a>
             <p class="game-card-description">Follow my socials to get news on new games!</p>
         </div>
